# angry-snakes

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix
crates/battlesnakes-shared/: Cargo.toml  lib.rs
crates/snakes-shared/: Cargo.toml  lib.rs
frontend/: index.html
sample-client/: Cargo.toml  client_ext.rs  javascript.js  main.rs  names.txt
src/: frontend.rs  game.rs  main.rs  tick_buffer.rs
