[package]
name = "angry-snakes"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*", "sample-client"]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = { version = "0.27.0", features = [] }
async-tungstenite = { version = "0.30.0", features = [
    "tokio-runtime",
    "tokio-native-tls",
    "async-tls",
] }
tokio-native-tls = "0.3.1"
futures = "0.3.31"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3.31"
snakes-shared = { path = "crates/snakes-shared" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
rand = "0.9.2"
pathfinding = "4.14.0"
schemars = "1.0.4"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
snakes-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand.workspace = true
schemars.workspace = true
