[package]
name = "sample-client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sample-client"
path = "main.rs"

[dependencies]
tungstenite.workspace = true
async-tungstenite.workspace = true
tokio.workspace = true
futures.workspace = true
snakes-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand.workspace = true
pathfinding.workspace = true
